Add new argument to ignore skip response codes in report